--- a/src/css/style.css
+++ b/src/css/style.css
@@ -860,6 +860,10 @@ video {
   grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
 .gap-4 {
   gap: 1rem;
 }
