--- a/src/css/style.css
+++ b/src/css/style.css
@@ -563,6 +563,11 @@ video {
   bottom: -100%;
 }
 
+.-inset-y-40 {
+  top: -10rem;
+  bottom: -10rem;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -597,6 +602,10 @@ video {
 
 .col-span-4 {
   grid-column: span 4 / span 4;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
 }
 
 .col-start-2 {
