--- a/src/css/style.css
+++ b/src/css/style.css
@@ -692,6 +692,18 @@ video {
   height: 3rem;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-auto {
+  height: auto;
+}
+
 .w-14 {
   width: 3.5rem;
 }
